--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,9 +1,9 @@
 /*
-* XO-Skeleton v1.0.1
+* xo-skeleton v1.0.1
 * Based on Skeleton v2.0.4 by Dave Gamache (getskeleton.com)
 * Includes normalize.css v3.0.2 by Nicolas Gallagher + Jonathan Neal (git.io/normalize)
 * Also includes the Raleway font by Google (google.com/fonts)
-* Copyright 2016, Xavier Duncan
+* Copyright 2016 - 2019, Xavier Duncan
 * www.xavierduncan.com
 * Free to use under the MIT license.
 * http://www.opensource.org/licenses/mit-license.php
