--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -613,11 +613,11 @@ ul .list {
 
 li {list-style-type: none;}
 
-/* .thewebsitekid {
+.thewebsitekid {
   padding: 45px 0 30px;
-  background: #2196F3 url("../images/pexels-photo-326424.jpg");
+  background: #2196F3;
   color: #FFF;
-} */
+}
 
 .theList {
   margin: 0;
