--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -36,7 +36,7 @@
 /* Normalize
 â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“ */
 html {font-family: sans-serif; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%;}
-body {margin: 0;}
+body {margin: 0; padding: 0;}
 article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary {display: block;}
 audio,canvas,progress,video {display: inline-block; vertical-align: baseline;}
 audio:not([controls]) {display: none;height: 0;}
@@ -176,9 +176,7 @@ body {
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
   font-weight: 400;
-  font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #222; }
-
+  font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif; }
 
 /* Typography
 â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“ */
@@ -624,7 +622,7 @@ li {list-style-type: none;}
   padding: 5px 0;
   color: #FFF;
   box-shadow: 0px 2px 5px #888888;
-  background-color: #2196F3;
+  background-color: #000;
 }
 
 .theList h6 {
