--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -282,7 +282,7 @@ input[type="button"]:focus {
   color: #333;
   border-color: #888;
   outline: 0;}
-.btn.btn-blue,
+.btn-blue,
 button.btn-blue,
 input[type="submit"].btn-blue,
 input[type="reset"].btn-blue,
@@ -292,19 +292,19 @@ input[type="button"].btn-blue {
   background-color: #2196F3;
   border: none;
   opacity: 0.9; }
-.btn.btn-blue:hover,
+.btn-blue:hover,
 button.btn-blue:hover,
 input[type="submit"].btn-blue:hover,
 input[type="reset"].btn-blue:hover,
 input[type="button"].btn-blue:hover,
-.btn.btn-blue:focus,
+.btn-blue:focus,
 button.btn-blue:focus,
 input[type="submit"].btn-blue:focus,
 input[type="reset"].btn-blue:focus,
 input[type="button"].btn-blue:focus { 
   box-shadow: 5px 5px 5px #888;
   opacity: 1; }
-.btn.btn-green,
+.btn-green,
 button.btn-green,
 input[type="submit"].btn-green,
 input[type="reset"].btn-green,
@@ -314,12 +314,12 @@ input[type="button"].btn-green {
   background-color: #4CAF50;
   border: none;
   border-color: transparent; }
-.btn.btn-green:hover,
+.btn-green:hover,
 button.btn-green:hover,
 input[type="submit"].btn-green:hover,
 input[type="reset"].btn-green:hover,
 input[type="button"].btn-green:hover,
-.btn.btn-green:focus,
+.btn-green:focus,
 button.btn-green:focus,
 input[type="submit"].btn-green:focus,
 input[type="reset"].btn-green:focus,
